--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 *.iml
-.gradle
+.idea/
+.gradle/
+build/
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
 /captures
-.externalNativeBuild
